fix: security improvements, role-based filtering, exception handling (#7)